# libbram

./: .clangd  .gitignore  CMakeLists.txt  Makefile  action.yaml
.github/workflows/: main.yaml
.github/worklows/: main.yaml
bindings/csharp/: CMakeLists.txt  parser.i
bindings/go/: CMakeLists.txt  parser.i
bindings/java/: CMakeLists.txt  parser.i
bindings/lua/: CMakeLists.txt  parser.i
bindings/python/: CMakeLists.txt  bram.i  parser.i
bindings/python/libbram/: __init__.py
include/libbram/: ast.hpp  bram.hpp  parser.hpp
include/libbram/utils/: logger.hpp
lib/: CMakeLists.txt  bram.hpp  utils.hpp
src/: CMakeLists.txt  ast.cpp  bram.cpp  bram.hpp  expr.cpp  expr.hpp  parser.cpp  utils.hpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  example.bram  parserTest.cpp  pred-proof-1.bram  pred-proof-2.bram  pred-proof-3.bram  pred-proof-4.bram  pred-proof-5.bram  pred-proof-6.bram  pred-proof-7.bram  pred-proof-8.bram  pred-proof-9.bram  predTest.cpp  resolution_example.bram
