cmake_minimum_required(VERSION 4.2)
project(libbram)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)  

add_subdirectory(src)
add_subdirectory(lib)
add_subdirectory(tests)

include(cmake/CPM.cmake)

set(LANGUAGE_BINDINGS csharp go java javascript lua python)
string(REPLACE ";" " " LANGUAGE_BINDINGS_STR "${LANGUAGE_BINDINGS}")
find_package(SWIG OPTIONAL_COMPONENTS LANGUAGE_BINDINGS_STR)
if(SWIG_FOUND)
  message("SWIG found: ${SWIG_EXECUTABLE}")
  include(UseSWIG)
  message("Finding bindings")
  foreach(language ${LANGUAGE_BINDINGS})
    if(IS_DIRECTORY bindings/${language} AND SWIG_${language}_FOUND)
      message("Generate ${language} bindings: true")
      add_subdirectory(bindings/${language})
    else()
      message("Generate ${language} bindings: false")
    endif()
  endforeach()
else()
  message("SWIG not found")
endif()